--- a/Computer_NetWork/计算机网络-总结.md
+++ b/Computer_NetWork/计算机网络-总结.md
@@ -7,7 +7,7 @@ categories:
   - 计算机网络
 keywords: 计算机网络，计网，面试
 description: 计算机网络-总结篇，可以用来期末复习，校招面试等。
-cover: 'https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.0.0/computer_network/logo.jpg'
+cover: 'https://unpkg.zhimg.com/youthlql@1.0.8/computer_network/logo.jpg'
 abbrlink: 3905e6f8
 date: 2020-04-16 17:21:58
 ---
@@ -185,7 +185,7 @@ https://blog.csdn.net/iispring/article/details/51615631
 
 ## 区别+应用场景
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.0.0/computer_network/summary/0001.png" width=90%> 
+<img src="https://unpkg.zhimg.com/youthlql@1.0.8/computer_network/summary/0001.png" width=90%> 
 
 **总结：**
 
@@ -300,7 +300,7 @@ TCP通过三次握手建立可靠连接
 
 在采用快恢复算法时，慢开始算法只是在TCP连接建立时和网络出现超时时才使用。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.0.0/computer_network/summary/0002.png" width=80%>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.8/computer_network/summary/0002.png" width=80%>
 
 
 
