--- a/Computer_NetWork/计算机网络-概述.md
+++ b/Computer_NetWork/计算机网络-概述.md
@@ -6,7 +6,7 @@ categories:
   - 计算机网络
 keywords: 计算机网络，计网
 description: 计算机网络-概述篇。
-cover: 'https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.0.0/computer_network/logo.jpg'
+cover: 'https://unpkg.zhimg.com/youthlql@1.0.8/computer_network/logo.jpg'
 abbrlink: be54bfd5
 date: 2021-04-03 14:21:58
 ---
@@ -30,15 +30,15 @@ date: 2021-04-03 14:21:58
 
 网络：网络（Network）由若干**结点（Node）**和连接这些结点的**链路（Link）**组成。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0001.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0001.png"/>
 
 互联网（或互连网）：多个网络通过路由器互连起来，这样就构成了一个覆盖范围更大的网络，即互连网（互联网）。因此，互联网又称为“网络的网络（Network of Networks）”。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0002.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0002.png"/>
 
 因特网：因特网（Internet）是世界上最大的互连网络（用户数以亿计，互连的网络数以百万计）。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0003.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0003.png"/>
 
 
 
@@ -52,13 +52,13 @@ date: 2021-04-03 14:21:58
 
 ### 因特网发展的三个阶段
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0004.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0004.png"/>
 
 
 
 **因特网服务提供者`ISP`(`I`nternet `S`ervice `P`rovider)**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0005.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0005.png"/>
 
 > Q：普通用户是如何接入到因特网的呢？
 >
@@ -71,13 +71,13 @@ date: 2021-04-03 14:21:58
 
 **中国的三大`ISP`：中国电信，中国联通，中国移动**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0006.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0006.png"/>
 
 
 
 **基于ISP的三层结构的因特网**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0007.png">
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0007.png">
 
 1、图中红线部分是两个私人用户进行通信的大致链路，可以看到需要经过多个ISP层级
 
@@ -100,7 +100,7 @@ date: 2021-04-03 14:21:58
   * 因特网工程部IETF，负责研究中短期工程问题，主要针对协议的开发和标准化；
   * 因特网研究部IRTF，从事理论方面的研究和开发一些需要长期考虑的问题。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0008.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0008.png" />
 
 * 制订因特网的正式标准要经过一下**4个阶段**：
 
@@ -124,7 +124,7 @@ date: 2021-04-03 14:21:58
 
   由**大量网络**和连接这些网络的**路由器**组成。这部分是**为边缘部分提供服务**的（提供连通性和交换）。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0009.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0009.png" />
 
 1. 路由器是一种专用计算机，但我们不称它为主机，路由器是实现分组交换的关键构建，其任务是转发收到的分组，这是网络核心最重要的部分。
 
@@ -142,12 +142,12 @@ date: 2021-04-03 14:21:58
 
 ### 电路交换
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0010.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0010.png" />
 
 1. 传统两两相连的方式，当电话数量很多时，电话线也很多，就很不方便
 2. 所以要使得每一部电话能够很方便地和另一部电话进行通信，就应该使用一个**中间设备**将这些电话连接起来，这个中间设备就是**电话交换机**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0011.png"  />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0011.png"  />
 
 * 电话交换机接通电话线的方式称为电路交换；
 
@@ -161,7 +161,7 @@ date: 2021-04-03 14:21:58
 
   3、释放连接（归还通信资源）
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0012.png"  />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0012.png"  />
 
 1. 当使用电路交换来传送计算机数据时，其线路的传输效率往往很低。这是因为计算机数据是突发式地出现在传输线路上的，而不是像打电话一样一直占用着通信资源。
 2. 试想一下这种情况，当用户正在输入和编辑一份待传输的文件时，用户所占用的通信资源暂时未被利用，该通信资源也不能被其它用户利用，宝贵的通信线路资源白白被浪费了
@@ -169,7 +169,7 @@ date: 2021-04-03 14:21:58
 
 ### 分组交换
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0013.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0013.png"/>
 
 1. 通常我们把表示该消息的整块数据成为一个**报文**。
 2. 在发送报文之前，先把较长的报文划分成一个个更小的等长数据段，在每一个数据段前面。加上一些由必要的控制信息组成的首部后，就构成一个分组，也可简称为“包”，相应地，首部也可称为“包头”。首部起到了很大的作用，首先首部中肯定包含了分组的目的地址，否则分组传输路径中的各分组交换机（也就是个路由器）就不知道如何转发分组了
@@ -212,7 +212,7 @@ date: 2021-04-03 14:21:58
 
 假设A，B，C，D是分组传输路径所要经过的4个结点交换机，纵坐标为时间
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0014.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0014.png"/>
 
 
 
@@ -232,7 +232,7 @@ date: 2021-04-03 14:21:58
 * 可以随时发送分组，而不需要事先建立连接。构成原始报文的**一个个分组**，**依次**在各结点交换机上存储转发。各结点交换机在发送分组的同时，还缓存接收到的分组。
 * **构成原始报文的一个个分组**，在各结点交换机上进行存储转发，相比报文交换，减少了转发时延，还可以避免过长的报文长时间占用链路，同时也有利于进行差错控制。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0015.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0015.png"/>
 
 
 
@@ -249,7 +249,7 @@ date: 2021-04-03 14:21:58
   * 计算机网络所连接的硬件，并不限于一般的计算机，而是包括了智能手机等智能硬件。
   * 计算机网络并非专门用来传送数据，而是能够支持很多种的应用（包括今后可能出现的各种应用）。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0016.png">
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0016.png">
 
 上图所示的各终端机只是具有显示和输入设备的终端，而并不是自治的计算机，所以上图并不是计算机网络，只是一个运行分时系统的大型机系统。
 
@@ -293,7 +293,7 @@ date: 2021-04-03 14:21:58
 
 * 总线型网络
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0017.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0017.png" />
 
 优点：建网容易，增减节点方便，节省线路
 
@@ -301,7 +301,7 @@ date: 2021-04-03 14:21:58
 
 * 星型网络
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0018.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0018.png" />
 
 星型网络图中的中央设备现在一般是交换机或路由器，
 
@@ -313,13 +313,13 @@ date: 2021-04-03 14:21:58
 
 * 环形网络
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0019.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0019.png" />
 
 环中信号是单向传输的
 
 * 网状型网络
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0020.png"  />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0020.png"  />
 
 一般情况下，每个节点至少由两条路径与其他节点相连，多用在广域网中
 
@@ -333,15 +333,15 @@ date: 2021-04-03 14:21:58
 
 ### 速率
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0021.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0021.png"/>
 
 ### 带宽 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0022.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0022.png"/>
 
 ### 吞吐量
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0023.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0023.png" />
 
 带宽1 Gb/s的以太网，代表其额定速率是1 Gb/s，这个数值也是该以太网的吞吐量的上限值。实际上，对于带宽1 Gb/s的以太网，可能实际吞吐量只有 700 Mb/s，甚至更低。
 
@@ -361,33 +361,33 @@ date: 2021-04-03 14:21:58
 
 网卡的发送速率，信道带宽，交换机的接口速率，它们共同决定着主机的发送速率。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0024.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0024.png"/>
 
 当处理时延忽略不计时，发送时延和传播时延谁占主导，要具体情况具体分析
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0025.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0025.png"/>
 
 ### 时延带宽积
 
 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0026.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0026.png"/>
 
 ### 往返时间
 
 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0027.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0027.png"/>
 
 ### 利用率
 
 
 
-  <img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0028.png"/>
+  <img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0028.png"/>
 
 ### 丢包率
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0029.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0029.png"/>
 
 
 
@@ -397,7 +397,7 @@ date: 2021-04-03 14:21:58
 
 ### 常见的计算机网络体系结构
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0030.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0030.png"/>
 
 1、如今用的最多的是TCP/IP体系结构，现今规模最大的、覆盖全球的、基于TCP/IP的互联网并未使用OSI标准。TCP/IP体系结构相当于将OSI体系结构的物理层和数据链路层合并为了网络接口层，并去掉了会话层和表示层。
 
@@ -405,7 +405,7 @@ date: 2021-04-03 14:21:58
 
 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0031.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0031.png"/>
 
 1、在用户主机的操作系统中，通常都带有符合TCP/IP体系结构标准的TCP/IP协议族。而用于网络互连的路由器中，也带有符合TCP/IP体系结构标准的TCP/IP协议族。只不过路由器一般只包含网络接口层和网际层。
 
@@ -435,7 +435,7 @@ date: 2021-04-03 14:21:58
 
 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0032.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0032.png"/>
 
 
 
@@ -443,11 +443,11 @@ date: 2021-04-03 14:21:58
 
 ### 分层的必要性
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0033.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0033.png" />
 
 **物理层问题**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0034.png"  />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0034.png"  />
 
 
 
@@ -455,7 +455,7 @@ date: 2021-04-03 14:21:58
 
 **数据链路层问题**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0035.png"  />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0035.png"  />
 
 1、如图所示，主机A要给主机C发送数据。
 
@@ -479,7 +479,7 @@ A：也就是需要解决分组的封装格式问题
 
 Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0036.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0036.png" />
 
 
 
@@ -493,7 +493,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0037.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0037.png" />
 
 
 
@@ -503,13 +503,13 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 - 引出了我们如何标识与网络通信相关的引用进程，进而解决进程之间基于网络通信的问题。
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0038.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0038.png"/>
 
 
 
 **应用层问题**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0039.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0039.png"/>
 
 
 
@@ -517,7 +517,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0040.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0040.png"/>
 
 ### 分层思想举例
 
@@ -525,7 +525,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 假设网络拓扑如下所示
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0041.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0041.png" />
 
 
 
@@ -533,7 +533,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 主机和Web服务器之间基于网络的通信，实际上是主机中的浏览器应用进程与Web服务器中的Web服务器应用进程之间基于网络的通信
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0042.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0042.png"/>
 
 
 
@@ -545,7 +545,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 - 应用层将HTTP请求报文交付给运输层处理
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0043.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0043.png"/>
 
 
 
@@ -559,7 +559,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 - 运输层将TCP报文段交付给网络层处理
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0044.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0044.png"/>
 
 
 
@@ -571,7 +571,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 - 网络层将IP数据报交付给数据链路层处理
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0045.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0045.png"/>
 
 
 
@@ -589,7 +589,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0046.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0046.png"/>
 
 
 
@@ -599,7 +599,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 * 前导码的作用是为了让目的主机做好接收帧的准备
 * 物理层将装有前导码的比特流变换成相应的信号发送给传输媒体
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0047.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0047.png" />
 
 
 
@@ -607,7 +607,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 - 信号通过传输媒体到达路由器
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0048.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0048.png" />
 
 
 
@@ -646,7 +646,7 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 **发回响应报文的步骤和之前过程类似**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0049.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0049.png"/>
 
 ### 专用术语
 
@@ -654,13 +654,13 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 **实体**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0050.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0050.png" />
 
 
 
 **协议**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0051.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0051.png"/>
 
 1、协议：控制两个对等实体进行逻辑通信的规则的集合
 
@@ -676,13 +676,13 @@ Q：另外对于总线型的网络，还会出现下面这种典型的问题
 
 **服务**
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0052.png" />
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0052.png" />
 
 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0053.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0053.png"/>
 
 
 
-<img src="https://cdn.jsdelivr.net/gh/youthlql/lqlp@v1.2.0/computer_network/gaishu/0054.png"/>
+<img src="https://unpkg.zhimg.com/youthlql@1.0.9/computer_network/gaishu/0054.png"/>
 
